feat(OMN-2077): Add effectiveness score computation to pattern feedback handler (#87)
* feat(OMN-2077): Add effectiveness score computation to pattern feedback handler

Wire quality_score recomputation into the session outcome recording flow.
After updating rolling window metrics, the handler now recomputes
quality_score = success_count / injection_count for all affected patterns
and returns the scores in the result model.

- Add SQL_UPDATE_EFFECTIVENESS_SCORE and SQL_FETCH_EFFECTIVENESS_SCORES
- Add update_effectiveness_scores() handler function
- Wire as step 6 in record_session_outcome() after rolling metric updates
- Add effectiveness_scores field to ModelSessionOutcomeResult output model
- Update contract.yaml with effectiveness_scoring capability
- Add integration test helpers (create_feedback_scenario, assert_score_updated)
- Add 11 unit tests covering score computation, edge cases, and multi-pattern

* fix(OMN-2077): Graceful degradation for effectiveness score computation

Wrap update_effectiveness_scores() in try/except so that if scoring
fails after the critical operations (marking injections recorded +
updating rolling metrics) already succeeded, the handler still returns
SUCCESS with empty effectiveness_scores rather than propagating the error.

* fix(OMN-2077): Address review findings for effectiveness scoring

- Fix docstring example: success_count → starting_success_count (helpers.py)
- Add updated_at = NOW() to SQL_UPDATE_EFFECTIVENESS_SCORE for standalone correctness
- Add test for graceful degradation when effectiveness scoring raises

Review iteration: 1/10

* fix(OMN-2077): Update record_session_outcome docstring to include scoring steps

- Add steps 5 (recompute effectiveness scores) and 6 (return with scores)
- Align docstring with contract.yaml and implementation

Review iteration: 2/10

* fix(OMN-2077): Update architecture handshake and fix yamlfmt in contract

Sync architecture-handshake.md with latest omnibase_core v0.16.0 and
wrap long de

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -61,7 +61,8 @@ output_model:
 #   3. Find all pattern_injections for this session that haven't been processed
 #   4. Mark injections as recorded with the outcome
 #   5. Update rolling_20 metrics for all unique patterns involved (decay approximation)
-#   6. Return ModelSessionOutcomeResult with status, counts, and pattern_ids
+#   6. Recompute effectiveness score (quality_score) from updated rolling metrics
+#   7. Return ModelSessionOutcomeResult with status, counts, pattern_ids, and effectiveness_scores
 # =============================================================================
 handler_routing:
   routing_strategy: "operation_match"
@@ -80,6 +81,7 @@ handler_routing:
         - injections_updated
         - patterns_updated
         - pattern_ids
+        - effectiveness_scores
         - recorded_at
         - error_message
 
@@ -88,7 +90,8 @@ handler_routing:
 # =============================================================================
 io_operations:
   - operation: "record_session_outcome"
-    description: "Record a session outcome and update rolling window metrics for the associated pattern"
+    description: "Record a session outcome, update rolling window metrics, and recompute effectiveness
+      scores"
     input_fields:
       - session_id
       - success
@@ -100,6 +103,7 @@ io_operations:
       - injections_updated
       - patterns_updated
       - pattern_ids
+      - effectiveness_scores
       - recorded_at
       - error_message
 
@@ -175,6 +179,8 @@ capabilities:
     description: "Write session outcome records to PostgreSQL"
   - name: "pattern_metrics"
     description: "Update rolling window metrics for pattern learning feedback"
+  - name: "effectiveness_scoring"
+    description: "Recompute pattern effectiveness scores (quality_score) from rolling metrics"
   - name: "session_outcome"
     description: "Record and track session success/failure outcomes"
 
@@ -185,7 +191,7 @@ metadata:
   author: "OmniNode Team"
   license: "MIT"
   created: "2026-01-30"
-  updated: "2026-01-30"
+  updated: "2026-02-10"
   tags:
     - effect
     - pattern-learning
@@ -196,3 +202,6 @@ metadata:
     - ticket: "OMN-1678"
       url: "https://linear.app/omninode/issue/OMN-1678"
       description: "Rolling window metric updates for session outcomes"
+    - ticket: "OMN-2077"
+      url: "https://linear.app/omninode/issue/OMN-2077"
+      description: "Pattern feedback consumption + effectiveness scoring"
