fix(review): [minor] Harden migration freeze script and add CI intent docs
- Fixed: scripts/check_migration_freeze.sh:37 - Include C (copied) status in grep pattern to prevent freeze bypass
- Fixed: scripts/check_migration_freeze.sh:29 - Document push-to-main limitation for GITHUB_BASE_REF
- Fixed: .github/workflows/ci.yaml:574 - Add comment explaining unconditional job execution

Review iteration: 1/10

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -571,6 +571,8 @@ jobs:
 
   # Migration freeze enforcement - blocks new migrations when .migration_freeze exists
   # Part of DB-per-repo refactor (OMN-2055), tracking: OMN-2072
+  # Deliberately unconditional: no path-filter gating or `needs: changes` dependency.
+  # The freeze must be enforced on every PR regardless of which files changed.
   migration-freeze:
     name: Migration Freeze Check
     runs-on: ubuntu-latest
