feat(OMN-2072): Add .migration_freeze and document schema freeze (#89)
* feat(OMN-2072): Add .migration_freeze and document schema freeze

Enforce schema freeze during DB-per-repo refactor (OMN-2055). No new
migrations allowed in deployment/database/migrations/ while freeze is
active. Migration moves, ownership fixes, and rollback bug fixes are
permitted.

* feat(OMN-2072): Add CI + pre-commit enforcement for migration freeze

Add automated enforcement that blocks new migrations while
.migration_freeze exists, completing the freeze mechanism from 8f03992.

- Add scripts/check_migration_freeze.sh (dual-mode: pre-commit + CI)
- Add migration-freeze-check pre-commit hook
- Add migration-freeze CI job wired into ci-summary
- Clarify DB-SPLIT-01 reference and align README consistency

* fix(OMN-2072): Harden migration freeze script for CI and improve clarity

- Add defensive git fetch in CI mode to ensure base branch ref exists
- Document why modified (M) migrations are intentionally allowed
- Clarify error message: A=added and R=renames blocked, M=allowed
- Add comment explaining pre-commit hook behavior on freeze file deletion

* fix(review): [minor] Harden migration freeze script and add CI intent docs

- Fixed: scripts/check_migration_freeze.sh:37 - Include C (copied) status in grep pattern to prevent freeze bypass
- Fixed: scripts/check_migration_freeze.sh:29 - Document push-to-main limitation for GITHUB_BASE_REF
- Fixed: .github/workflows/ci.yaml:574 - Add comment explaining unconditional job execution

Review iteration: 1/10

* fix(review): [minor] Clarify copy-block rationale and use shallow clone in CI

- scripts/check_migration_freeze.sh: Added comment clarifying why copies (C)
  are blocked and how cross-repo migration moves are handled
- scripts/check_migration_freeze.sh: Switch from three-dot to two-dot diff
  so the script works with shallow clones
- .github/workflows/ci.yaml: Remove fetch-depth: 0 from migration-freeze job
  (default shallow clone is suffi

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -569,6 +569,22 @@ jobs:
           echo "Running cross-repo validation (Kafka import guard)..."
           uv run python -m omnibase_core.validation.cross_repo --policy .cross-repo-policy.yaml
 
+  # Migration freeze enforcement - blocks new migrations when .migration_freeze exists
+  # Part of DB-per-repo refactor (OMN-2055), tracking: OMN-2072
+  # Deliberately unconditional: no path-filter gating or `needs: changes` dependency.
+  # The freeze must be enforced on every PR regardless of which files changed.
+  migration-freeze:
+    name: Migration Freeze Check
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check migration freeze
+        run: ./scripts/check_migration_freeze.sh --ci
+
   # ============================================================================
   # Architecture Handshake Verification
   # ============================================================================
@@ -604,7 +620,7 @@ jobs:
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit, cross-repo-validation, check-handshake]
+    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit, cross-repo-validation, migration-freeze, check-handshake]
     if: always()
 
     steps:
@@ -618,6 +634,7 @@ jobs:
           contracts="${{ needs.contract-validation.result }}"
           ioaudit="${{ needs.io-audit.result }}"
           crossrepo="${{ needs.cross-repo-validation.result }}"
+          migrationfreeze="${{ needs.migration-freeze.result }}"
           handshake="${{ needs.check-handshake.result }}"
           production_code_changed="${{ needs.changes.outputs.production_code }}"
 
@@ -687,6 +704,7 @@ jobs:
           echo "| Contract Validation | $(get_status_icon $contracts) | \`$contracts\` |" >> $GITHUB_STEP_SUMMARY
           echo "| I/O Audit | $(get_status_icon $ioaudit) | \`$ioaudit\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Cross-Repo Validation | $(get_status_icon $crossrepo) | \`$crossrepo\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Migration Freeze | $(get_status_icon $migrationfreeze) | \`$migrationfreeze\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Architecture Handshake | $(get_status_icon $handshake) | \`$handshake\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
@@ -705,6 +723,7 @@ jobs:
              is_acceptable "$contracts" "false" && \
              is_acceptable "$ioaudit" "false" && \
              is_acceptable "$crossrepo" "false" && \
+             is_acceptable "$migrationfreeze" "false" && \
              is_handshake_acceptable "$handshake"; then
             echo "### :rocket: All CI checks passed!" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
