--- a/.env.example
+++ b/.env.example
@@ -15,24 +15,18 @@
 # =============================================================================
 # PostgreSQL Database Configuration
 # =============================================================================
+# Single connection URL for the OmniIntelligence database.
 # Remote PostgreSQL server at 192.168.86.200 (OmniNode Bridge stack)
 # Port 5436 is the EXTERNAL port for host machine access.
-# Docker services use port 5432 (internal).
-
-POSTGRES_HOST=192.168.86.200
-POSTGRES_PORT=5436
-POSTGRES_DATABASE=omninode_bridge
-POSTGRES_USER=postgres
-
-# REQUIRED: Set this to the actual PostgreSQL password
+#
+# REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
-# DO NOT commit this value to version control.
-POSTGRES_PASSWORD=
+# DO NOT commit credentials to version control.
+OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omninode_bridge
 
 # Connection pool settings (optional, sensible defaults provided)
 POSTGRES_MIN_POOL_SIZE=2
 POSTGRES_MAX_POOL_SIZE=10
-POSTGRES_COMMAND_TIMEOUT=60.0
 
 # =============================================================================
 # Kafka/Redpanda Event Bus Configuration
