fix(review): [critical+minor+nitpick] structured governance errors, docs, test cleanup
- handle_store_pattern returns StorePatternResult instead of raising
  ValueError for governance failures (domain errors are data, not exceptions)
- handle_consume_discovered returns ModelPatternStoredEvent | GovernanceResult
- handler_pattern_storage router adapted for StorePatternResult + mypy guards
- contract.yaml topic naming docs clarified for multi-producer events
- shared make_discovered_event factory extracted to omniintelligence.testing
- test renamed to test_low_confidence_rejected_at_event_creation
- defensive pool size parsing in plugin.py with fallback defaults
- URL validation in conftest rejects malformed URLs instead of defaulting
- co-located node_tests updated for StorePatternResult return type

--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -200,9 +200,16 @@ io_operations:
 #   - published_events = documentation layer (WHAT)
 #   - event_bus = runtime routing layer (WHERE)
 #
-# Topic naming: onex.{kind}.{producer}.{event-name}.v{n}
+# Topic naming: onex.{kind}[.{producer}].{event-name}.v{n}
 #   - kind=cmd for commands/inputs
 #   - kind=evt for events/outputs
+#   - {producer} segment: REQUIRED for internal single-producer topics
+#     (e.g., onex.evt.omniintelligence.pattern-learned.v1)
+#     Use when events originate from a single known service.
+#   - {producer} segment: OMITTED for multi-producer business events
+#     (e.g., onex.evt.pattern.discovered.v1)
+#     Use when events come from multiple external systems or are domain-level
+#     events that cross service boundaries.
 # =============================================================================
 published_events:
   - topic_suffix: "onex.evt.omniintelligence.pattern-stored.v1"
@@ -247,8 +254,8 @@ event_bus:
 
   # Topics this node subscribes to (receives events from)
   subscribe_topics:
-    - "onex.evt.omniintelligence.pattern-learned.v1"
-    - "onex.evt.pattern.discovered.v1"
+    - "onex.evt.omniintelligence.pattern-learned.v1"  # Single-producer: includes 'omniintelligence'
+    - "onex.evt.pattern.discovered.v1"  # Multi-producer: producer segment omitted
 
   # Topics this node publishes to (sends events to)
   publish_topics:
