fix(review): [minor] stale docs, module-level constant, command_timeout, URL validation

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Edit .env with your specific values (especially POSTGRES_PASSWORD)
+# 2. Edit .env with your specific values (especially the <password> placeholder in OMNIINTELLIGENCE_DB_URL)
 # 3. Run tests: pytest tests/integration -m integration -v
 #
 # IMPORTANT: The .env file contains secrets and should NEVER be committed.
