--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,10 @@ OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omn
 POSTGRES_MIN_POOL_SIZE=2
 POSTGRES_MAX_POOL_SIZE=10
 
+# Command timeout in seconds for database operations (optional).
+# Read by plugin.py and tests/integration/conftest.py with a default of 60.0.
+# POSTGRES_COMMAND_TIMEOUT=60.0
+
 # =============================================================================
 # Kafka/Redpanda Event Bus Configuration
 # =============================================================================
