--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Edit .env with your specific values (especially POSTGRES_PASSWORD)
+# 2. Edit .env with your specific values (especially the <password> placeholder in OMNIINTELLIGENCE_DB_URL)
 # 3. Run tests: pytest tests/integration -m integration -v
 #
 # IMPORTANT: The .env file contains secrets and should NEVER be committed.
@@ -15,24 +15,22 @@
 # =============================================================================
 # PostgreSQL Database Configuration
 # =============================================================================
+# Single connection URL for the OmniIntelligence database.
 # Remote PostgreSQL server at 192.168.86.200 (OmniNode Bridge stack)
 # Port 5436 is the EXTERNAL port for host machine access.
-# Docker services use port 5432 (internal).
-
-POSTGRES_HOST=192.168.86.200
-POSTGRES_PORT=5436
-POSTGRES_DATABASE=omninode_bridge
-POSTGRES_USER=postgres
-
-# REQUIRED: Set this to the actual PostgreSQL password
+#
+# REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
-# DO NOT commit this value to version control.
-POSTGRES_PASSWORD=
+# DO NOT commit credentials to version control.
+OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omninode_bridge
 
 # Connection pool settings (optional, sensible defaults provided)
 POSTGRES_MIN_POOL_SIZE=2
 POSTGRES_MAX_POOL_SIZE=10
-POSTGRES_COMMAND_TIMEOUT=60.0
+
+# Command timeout in seconds for database operations (optional).
+# Read by plugin.py and tests/integration/conftest.py with a default of 60.0.
+# POSTGRES_COMMAND_TIMEOUT=60.0
 
 # =============================================================================
 # Kafka/Redpanda Event Bus Configuration
