--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -114,6 +114,18 @@ handler_routing:
         - "update pattern status"
         - "emit pattern-promoted event"
 
+    # Consume discovered pattern - ingest from external discovery event
+    - operation: "consume_discovered_pattern"
+      handler:
+        function: "handle_consume_discovered"
+        module: "omniintelligence.nodes.node_pattern_storage_effect.handlers.handler_consume_discovered"
+        type: "async"
+      description: "Consume a pattern.discovered event from external systems and store it"
+      actions:
+        - "validate discovered event"
+        - "map to storage input"
+        - "delegate to store_pattern handler"
+
   # Default handler for unrecognized operations
   default_handler:
     function: "handle_store_pattern"
@@ -188,9 +200,16 @@ io_operations:
 #   - published_events = documentation layer (WHAT)
 #   - event_bus = runtime routing layer (WHERE)
 #
-# Topic naming: onex.{kind}.{producer}.{event-name}.v{n}
+# Topic naming: onex.{kind}[.{producer}].{event-name}.v{n}
 #   - kind=cmd for commands/inputs
 #   - kind=evt for events/outputs
+#   - {producer} segment: REQUIRED for internal single-producer topics
+#     (e.g., onex.evt.omniintelligence.pattern-learned.v1)
+#     Use when events originate from a single known service.
+#   - {producer} segment: OMITTED for multi-producer business events
+#     (e.g., onex.evt.pattern.discovered.v1)
+#     Use when events come from multiple external systems or are domain-level
+#     events that cross service boundaries.
 # =============================================================================
 published_events:
   - topic_suffix: "onex.evt.omniintelligence.pattern-stored.v1"
@@ -235,7 +254,8 @@ event_bus:
 
   # Topics this node subscribes to (receives events from)
   subscribe_topics:
-    - "onex.evt.omniintelligence.pattern-learned.v1"
+    - "onex.evt.omniintelligence.pattern-learned.v1"  # Single-producer: includes 'omniintelligence'
+    - "onex.evt.pattern.discovered.v1"  # Multi-producer: producer segment omitted
 
   # Topics this node publishes to (sends events to)
   publish_topics:
@@ -250,6 +270,11 @@ event_bus:
       schema_ref: "omniintelligence.nodes.node_pattern_storage_effect.models.ModelPatternStorageInput"
       description: "Learned pattern events from pattern_learning_compute pipeline. Contains pattern data,
         confidence scores, and learning metadata."
+      content_type: "application/json"
+    "onex.evt.pattern.discovered.v1":
+      schema_ref: "omniintelligence.models.events.model_pattern_discovered_event.ModelPatternDiscoveredEvent"
+      description: "Pattern discovery events from external systems (e.g., omniclaude). Contains pattern
+        signature, domain, confidence, and source session metadata."
       content_type: "application/json"
 
   # Metadata for published topics
