feat: Wire all omnibase_core Python validators + fix violations across codebase
- Fix validate.py module path (cli → validator_cli) that caused 4 false failures
- Add 6 new validators: any-type, pydantic, naming-convention, enum-governance,
  enum-casing, literal-duplication
- Add run_standalone_validator() for non-CLI ValidatorBase subclasses
- Parse violation counts from output instead of relying on buggy exit codes
- Add custom validators: validate_clean_root.py, validate_naming.py
- Fix contract_linter glob pattern to match actual node layout

Validator fixes:
- Replace Any → object across ~40 files (129 violations → 0)
- Replace Union[bool,float,int,str] → PrimitiveValue from omnibase_core (6 files)
- Rename ServiceHandlerRegistry → RegistryDemotionHandlers/RegistryPromotionHandlers
- Convert RunResultLiteral → EnumRunResult enum
- Fix 2 contract YAML schemas (missing contract_version, wrong field name)
- Clean up root directory (.DS_Store)
- Delete stale docs, move migration docs to docs/migrations/

14 of 15 validators now pass. Remaining: architecture (42 file-splitting
violations tracked in OMN-2206).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -336,6 +336,35 @@ repos:
   - repo: local
     hooks:
       # --------------------------------------------------------------------------
+      # Clean Root - Root directory cleanliness enforcement
+      # Validates: Only allowed files/directories in project root
+      # Scope: Triggered when any root-level files change
+      # Purpose: Keeps the repository "front door" clean for public release
+      # --------------------------------------------------------------------------
+      - id: onex-validate-clean-root
+        name: onex-validate-clean-root
+        entry: python scripts/validation/validate_clean_root.py
+        language: system
+        pass_filenames: false
+        always_run: true
+        stages: [pre-commit]
+
+      # --------------------------------------------------------------------------
+      # Naming Conventions - File and class naming enforcement
+      # Validates: Python files and classes follow ONEX naming conventions
+      # Scope: Triggered on changes to source files
+      # Purpose: Enforces consistent naming across the codebase
+      # --------------------------------------------------------------------------
+      - id: onex-validate-naming
+        name: onex-validate-naming
+        entry: python scripts/validation/validate_naming.py
+        language: system
+        pass_filenames: false
+        types: [python]
+        files: ^src/omniintelligence/
+        stages: [pre-commit]
+
+      # --------------------------------------------------------------------------
       # Migration Freeze Check - Block new migrations during DB-per-repo refactor
       # Validates: No new .sql files added to deployment/database/migrations/
       # Scope: Only triggers when migration files or .migration_freeze change
