--- a/src/omniintelligence/repositories/learned_patterns.repository.yaml
+++ b/src/omniintelligence/repositories/learned_patterns.repository.yaml
@@ -14,6 +14,14 @@
 #   - validator_db_params: All :params defined, no unused
 #
 # =============================================================================
+# ONEX CONTRACT ENVELOPE (required by contracts validator)
+# =============================================================================
+contract_version:
+  major: 1
+  minor: 0
+  patch: 0
+node_type: "SERVICE"
+# =============================================================================
 # SIGNATURE FIELDS
 # =============================================================================
 #
